hphp/test/slow/parser/async-constructor.php.expectf
Fatal error: Cannot declare constructors and magic methods like `__construct` as `async` in %s/async-constructor.php on line 4
